<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rotate_bg"
    android:minWidth="280.0dip"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:singleLine="true"
        android:text="@string/xml_dialog_about_title"
        android:textColor="@color/info_text_1"
        android:textSize="19.0sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100.0dip"
        android:fadingEdge="none"
        android:scrollbarThumbVertical="@drawable/scrollbar_thumb" >

        <LinearLayout
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:textColor="@color/black"
                android:text="@string/xml_dialog_about_info1"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/xml_dialog_about_info2"
                android:textColor="@color/info_text_2"
                android:textSize="16.0sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/dialog_about_btn_ok"
        android:layout_width="140.0dip"
        android:layout_height="50.0dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/btn_cancle_style"
        android:singleLine="true"
         />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@color/transparent" />

</LinearLayout>