<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player_skin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_player_bg"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context=".PlayerActivity" >

    <ImageView
        android:id="@+id/activity_Blur_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@color/activity_player_top_coverview"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/activity_player_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/player_activity_nowplaying_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/player_activity_nowplaying"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/activity_main_iv_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/music_name"
                    android:textColor="@color/info_text_1"
                    android:textSize="13.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/singer"
                    android:textColor="@color/info_text_2"
                    android:textSize="13.0sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/years"
                    android:textColor="@color/info_text_3"
                    android:textSize="13.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingRight="30dp" >

                <com.whitelaning.mmusic.custom.PushView
                    android:id="@+id/activity_player_tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/info_text_1"
                    android:textSize="13.0sp"
                    android:textStyle="bold" />

                <com.whitelaning.mmusic.custom.PushView
                    android:id="@+id/activity_player_tv_artist"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/info_text_2"
                    android:textSize="11.0sp" />

                <com.whitelaning.mmusic.custom.PushView
                    android:id="@+id/activity_player_tv_years"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/time_normal"
                    android:textColor="@color/info_text_3"
                    android:textSize="11.0sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_activity_controlbar"
        android:layout_width="match_parent"
        android:layout_height="100.0dip"
        android:layout_alignParentBottom="true"
        android:background="@color/player_activity_controlbar"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20.0dip"
            android:layout_marginBottom="2dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/activity_player_tv_time_current"
                android:layout_width="50.0dip"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="8.0dip"
                android:textColor="@color/time_current_bg"
                android:textSize="13.0sp"
                 />

            <SeekBar
                android:id="@+id/activity_player_seek"
                android:layout_width="200.0dip"
                android:layout_height="wrap_content"
                android:max="0"
                android:paddingLeft="8sp"
                android:paddingRight="8sp"
                android:progress="0"
                android:progressDrawable="@drawable/player_seekbar_style"
                android:thumb="@drawable/thumb_bar" />

            <TextView
                android:id="@+id/activity_player_tv_time_total"
                android:layout_width="50.0dip"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="8.0dip"
                android:textColor="@color/time_current_bg"
                android:textSize="13.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/activity_player_ib_favorite"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/player_btn_favorite_nostar_style" />

            <ImageButton
                android:id="@+id/activity_player_ib_previous"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/player_btn_previous_style" />

            <ImageButton
                android:id="@+id/activity_player_ib_play"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/player_btn_play_style" />

            <ImageButton
                android:id="@+id/activity_player_ib_next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/player_btn_next_style" />

            <ImageButton
                android:id="@+id/activity_player_ib_mode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/player_btn_mode_normal_style" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_player_center"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@id/activity_player_info"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" >

        <ImageView
            android:layout_width="180dip"
            android:layout_height="180dip"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/t1" />

        <com.whitelaning.mmusic.custom.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/album_skin"
            android:layout_width="118dip"
            android:layout_height="118dip"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:border_color="@color/rounded_image_view_border_color"
            app:border_width="0dip"
            app:corner_radius="30dip"
            app:mutate_background="true"
            app:oval="true" />
    </RelativeLayout>

    <com.whitelaning.mmusic.lyric.LyricView
        android:id="@+id/activity_player_lyric"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/player_activity_controlbar"
        android:layout_below="@id/activity_player_info"
        android:background="@color/activity_player_lyric_bg"
        android:gravity="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/activity_player_nolyeric"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/player_activity_controlbar"
        android:layout_below="@id/activity_player_info"
        android:contentDescription="@string/app_name"
        android:gravity="center_vertical|center_horizontal"
        android:padding="3.0dip"
        android:text="@string/no_lyric"
        android:textColor="#abafb3"
        android:visibility="gone" />

</RelativeLayout>